--- a/pom.xml
+++ b/pom.xml
@@ -53,21 +53,9 @@
       <version>5.6.3.Final</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.32</version>
-    </dependency>
-    <dependency>
-          <groupId>org.projectlombok</groupId>
-          <artifactId>lombok</artifactId>
-          <version>1.18.24</version>
-          <scope>provided</scope>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.18.Final</version>
     </dependency>
   </dependencies>
 
@@ -76,10 +64,10 @@
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-antrun-plugin</artifactId>
-          <version>2.4</version>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.1</version>
           <configuration>
-            <warSourceDirectory>src/webapp</warSourceDirectory>
+            <warSourceDirectory>src/main/webapp</warSourceDirectory>
             <warName>task-7</warName>
             <failOnMissingWebXml>false</failOnMissingWebXml>
           </configuration>
