Java pre-project. Практическая задача 3.1.1:
- перевод приложения из репозитория https://github.com/kva-devops/Task-7 на SpringBoot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-# Postgres properties
-db.postgres.driver=org.postgresql.Driver
-db.postgres.url=jdbc:postgresql://127.0.0.1:5432/task-7
-db.postgres.username=postgres
-db.postgres.password=password
+# Spring Boot Web
+spring.mvc.view.prefix=WEB-INF/pages/
+spring.mvc.view.suffix=.html
 
-# Hibernate properties
-hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+# Spring Boot Data Jpa
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/task-7
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=update
